--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "nodemon app"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "color-hash": "^1.0.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
@@ -13,7 +15,9 @@
     "express": "~4.16.0",
     "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
+    "mongoose": "^5.4.9",
     "morgan": "~1.9.0",
+    "multer": "^1.4.1",
     "nodemon": "^1.18.9",
     "pug": "2.0.0-beta11",
     "socket.io": "^2.2.0",
